# imx6ull-bio-data-acq

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/src/: CircularBuffer.cpp  CircularBuffer.h  db.cpp  db.h  log.cpp  log.h  main.cpp  server.h  uart.cpp  uart.h
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  main.js  router.js
frontend/src/components/: FeedBack.vue  HistoryData.vue  Home.vue  LineChart.vue  Login.vue  Welcome.vue
frontend/src/components/layout/: SlideBar.vue
qt/imx6ull-bio-data-acq/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: db.h  main.cpp
